# wagtail-grapple

./: .all-contributorsrc  .coveragerc  .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc.toml  .readthedocs.yml  CHANGELOG.md  Dockerfile  LICENCE.txt  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  lint.sh  manage.py  pyproject.toml  requirements-channels.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: black.yml  ci.yml  codeql-analysis.yml  pre-commit.yml  publish.yml  ruff.yml  tests.yml
UNKNOWN.egg-info/: SOURCES.txt
docs/: '  conf.py  contents.rst  index.rst  requirements.txt  spelling_wordlist.txt
docs/general-usage/: decorators.rst  graphql-types.rst  hooks.rst  index.rst  interfaces.rst  middleware.rst  model-types.rst  preview.rst  settings.rst  types.rst  usage-with-frontend-frameworks.rst  usage-with-gatsby.rst
docs/getting-started/: examples.rst  index.rst  installation.rst  settings.rst
example/: Dockerfile  db.sqlite3  requirements-channels.txt  requirements.txt
example/documents/: models.py
example/documents/migrations/: 0001_initial.py
example/example/: asgi.py  db.sqlite3  routing.py  urls.py
example/example/settings/: __init__.py  base.py  dev.py
example/example/tests/: test_blog.py  test_grapple.py  test_previews.py  test_settings.py
example/home/: blocks.py  factories.py  models.py  mutations.py  subscriptions.py  wagtail_hooks.py
example/home/migrations/: 0001_initial.py  0002_create_homepage.py  0003_alter_blogpage_body.py  0003_blogpage.py  0004_auto_20190623_0932.py  0004_blogpage_summary.py  0005_advert_rich_text.py  0005_auto_20190623_1042.py  0005_auto_20220909_0959.py  0006_middleware_model.py  0006_socialmediasettings.py  0007_blogpage_cover.py  0008_blogpage_book_file.py  0009_auto_20190626_2003.py  0010_add_image_gallery.py  0011_auto_20190819_1332.py  0012_auto_20191002_1154.py  0013_auto_20191030_1159.py  0013_blogpage_related_page.py  0014_auto_20200303_1234.py  0014_story.py  0015_auto_20200228_1400.py  0015_auto_20200618_1452.py  0015_auto_20200803_2223.py  0016_nested_structblock.py  0017_auto_20201006_2147.py  0018_add_pagechooserblock.py  0019_auto_20201124_2247.py  0019_simplemodel.py  0020_correct_cover_model_fk.py  0021_auto_20210401_0935.py  0021_document_models_string.py  0022_alter_blogpage_body.py  0023_alter_blogpage_body.py  0024_globalsocialmediasettings.py  0025_alter_blogpage_body.py  0025_blogpage_summary.py
example/home/static/css/: welcome_page.css
example/home/templates/home/: home_page.html
example/home/test/: test_advert.py  test_blog.py  test_general.py  test_person.py  test_subscriptions.py
example/images/: models.py
example/images/migrations/: 0001_initial.py  0002_alter_customimage_file_hash.py
example/news/: factories.py  models.py
example/news/migrations/: 0001_initial.py
example/search/: views.py
example/settings/: base.py
example/templates/: base.html
grapple/: .gitignore  __init__.py  actions.py  apps.py  asgi.py  exceptions.py  helpers.py  loaders.py  middleware.py  models.py  query.py  registry.py  schema.py  settings.py  signals.py  urls.py  utils.py  views.py  wagtail_hooks.py
grapple.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
grapple/db/: optimizer.py  query.py
grapple/docs/: conf.py
grapple/migrations/: 0001_initial.py  0002_delete_pagepreview.py  0003_stubmodel.py  0004_delete_stubmodel.py
grapple/static/js/: realtime_preview.js
grapple/templates/grapple/: graphiql.html  playground.html  preview.html
grapple/types/: collections.py  documents.py  images.py  interfaces.py  media.py  pages.py  redirects.py  rich_text.py  search.py  settings.py  sites.py  snippets.py  streamfield.py  structures.py  tags.py
src/grapple/: actions.py  apps.py  helpers.py  middleware.py  schema.py  urls.py  utils.py
src/grapple/migrations/: 0001_initial.py
src/grapple/templates/grapple/: graphiql.html
src/grapple/types/: documents.py  images.py  media.py  pages.py  sites.py  structures.py  tags.py
tests/: requirements-base.txt  requirements-channels.txt  requirements-test.txt  requirements.txt  settings.py  settings_custom_interfaces.py  settings_custom_page_interface.py  test_advert.py  test_blog.py  test_general.py  test_grapple.py  test_image_types.py  test_interfaces.py  test_models_types.py  test_previews.py  test_redirects.py  test_subscriptions.py  test_utils.py  urls.py  wsgi.py
tests/documents/migrations/: 0001_initial.py
tests/example/: urls.py  wsgi.py
tests/example/settings/: base.py  production.py
tests/example/tests/: test_grapple.py
tests/home/: factories.py  mutations.py  subscriptions.py
tests/home/migrations/: 0001_initial.py  0002_create_homepage.py  0004_blogpage_summary.py
tests/home/test/: test_advert.py  test_blog.py  test_general.py  test_subscriptions.py
tests/search/: views.py
tests/static/: .gitkeep
tests/testapp/: blocks.py  factories.py  interfaces.py  mutations.py  wagtail_hooks.py
tests/testapp/migrations/: 0001_initial.py  0002_create_homepage.py  0003_alter_blogpage_body.py  0003_authorpage_nickname.py  0003_customimage_description_and_document_file_size.py  0003_simplemodelwithalternativeinterface.py
tests/testapp/models/: __init__.py  core.py  media.py
wagtail-grapple/: MANIFEST.in  db.sqlite3  requirements.txt  setup.py
wagtail-grapple/example/: urls.py
wagtail-grapple/example/settings/: base.py
wagtail-grapple/grapple/: actions.py  apps.py  helpers.py  schema.py  urls.py
wagtail-grapple/grapple/migrations/: 0003_stubmodel.py
wagtail-grapple/grapple/types/: images.py  redirects.py  search.py
wagtail-grapple/home/: blocks.py
wagtail-grapple/home/migrations/: 0004_auto_20190623_0932.py  0005_auto_20190623_1042.py  0007_blogpage_cover.py  0008_blogpage_book_file.py  0009_auto_20190626_2003.py  0010_add_image_gallery.py  0011_auto_20190819_1332.py  0013_auto_20191030_1159.py
wagtail-grapple/images/: models.py
(+3 files in other folders)
