[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagtail-grapple"
authors = [
    {name = "Nathan Horrigan", email = "hello@torchbox.com"}
]
maintainers = [
    {name = "Dan Braghis", email = "dan.braghis@torchbox.com"}
]
description = "A Wagtail package that speeds up and simplifies implementing a GraphQL endpoint!"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["wagtail", "django", "graphql", "graphene", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 6",
    "Framework :: Wagtail :: 7",
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "Wagtail>=6.3",
    "graphene-django>=3,<4",
    "wagtail-headless-preview"
]

[project.optional-dependencies]
testing = [
    "coverage>=7.2.7,<8.0",
    "flit>=3.8",
    "factory-boy==3.2.1",
    "wagtail-factories>=4.1.0",
    "django-cors-headers==3.4.0",
    "wagtailmedia>=0.13",
    "dj-database-url==2.1.0",
    "psycopg2-binary>=2.9.5,<3.0.0",
]

docs = [
    "Sphinx>=7.0,<8.0",
    "sphinx-wagtail-theme>=6.0,<7.0",
    "sphinxcontrib-spelling>=8.0,<9.0",
    "sphinx_copybutton>=0.5",
]

[project.urls]
Changelog = "https://github.com/torchbox/wagtail-grapple/blob/main/CHANGELOG.md"
Documentation = "https://wagtail-grapple.readthedocs.io/en/latest/"

[tool.flit.module]
name = "grapple"

[tool.flit.sdist]
include = ["LICENSE"]
exclude = [
    "docs/",
    "tests/",
    "CHANGELOG.md",
    "Dockerfile",
    "Makefile",
    ".*",
    "*.json",
    "*.ini",
    "*.yml",
    "*.yaml",
    "ruff.toml",
]

[tool.doc8]
ignore = ["D000", "D001"]
ignore_path = ["docs/build", "src", "tests", ".git", ".tox", ".venv", "venv"]
