[bdist_wheel]
universal = 1

[metadata]
name = wagtail-grapple
author = Nathan Horrigan
author_email = hello@torchbox.com
maintainer = Dan Braghis
maintainer_email = dan.braghis@torchbox.com
description = A Django app that speeds up and simplifies implementing a GraphQL endpoint!
version = attr: grapple.__version__
url = https://github.com/GrappleGQL/wagtail-grapple
project_urls =
    Changelog = https://github.com/GrappleGQL/wagtail-grapple/blob/main/CHANGELOG.md
keywords =
  wagtail
  django
  graphene
  graphql
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Framework :: Wagtail
  Framework :: Wagtail :: 2
  Framework :: Wagtail :: 3
  Topic :: Scientific/Engineering
long_description = file:README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.7
setup_requires =
  setuptools >= 40.6
  pip >= 10
include_package_data = true
packages = find:
install_requires =
    Django>=3.0,<4.0
    wagtail>=2.14, <4.0
    graphene-django>=2.7.1, <2.14.0
    graphql-core>=2.2.1, <3
    wagtail-headless-preview


[options.extras_require]
channels =
    Django>=3.0,<4.0
    channels>=3.0, <3.1
    channels_redis==3.3.0
    graphql-ws==0.4.4

[flake8]
select = C,E,F,W,B,I
ignore = E203,E501,W503
exclude=migrations,dist,build,venv,node_modules,.tox,venv,.venv,.git
max-line-length=88

[isort]
profile=black
skip=migrations,.git,__pycache__,LC_MESSAGES,locale,build,dist,.github,.tox,venv
blocked_extensions=rst,html,js,svg,txt,css,scss,png,snap,tsx,sh
known_first_party=grapple
default_section=THIRDPARTY

[doc8]
ignore=D000,D001
