[bdist_wheel]
universal = 1

[metadata]
name = wagtail-grapple
author = Nathan Horrigan
author_email = hello@torchbox.com
maintainer = Dan Braghis
maintainer_email = dan.braghis@torchbox.com
description = A Wagtail package that speeds up and simplifies implementing a GraphQL endpoint!
version = attr: grapple.__version__
url = https://github.com/torchbox/wagtail-grapple
project_urls =
    Changelog = https://github.com/torchbox/wagtail-grapple/blob/main/CHANGELOG.md
keywords =
  wagtail
  django
  graphene
  graphql
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Framework :: Wagtail
  Framework :: Wagtail :: 4
  Topic :: Scientific/Engineering
long_description = file:README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.8
setup_requires =
  setuptools >= 41
  pip >= 19
include_package_data = true
packages = find:
install_requires =
    wagtail>=4.1
    graphene-django>=3, <4
    wagtail-headless-preview


[options.extras_require]
channels =
    Django>=3.2, <4.1
    channels>=3.0, <3.1
    channels_redis==3.3.0
    graphql-ws==0.4.4

[flake8]
select = C,E,F,W,B,I
ignore = E203,E501,W503
extend-ignore = B028
exclude=migrations,dist,build,venv,node_modules,.tox,venv,.venv,.git
max-line-length=88

[isort]
profile=black
skip=migrations,.git,__pycache__,LC_MESSAGES,locale,build,dist,.github,.tox,venv
blocked_extensions=rst,html,js,svg,txt,css,scss,png,snap,tsx,sh
known_first_party=grapple
default_section=THIRDPARTY

[doc8]
ignore=D000,D001
