[bdist_wheel]
universal = 1

[metadata]
name = wagtail-grapple
author = Nathan Horrigan
author_email = hello@torchbox.com
maintainer = Dan Braghis
maintainer_email = dan.braghis@torchbox.com
description = A Wagtail package that speeds up and simplifies implementing a GraphQL endpoint!
version = attr: grapple.__version__
url = https://github.com/torchbox/wagtail-grapple
project_urls =
    Changelog = https://github.com/torchbox/wagtail-grapple/blob/main/CHANGELOG.md
keywords =
  wagtail
  django
  graphene
  graphql
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Framework :: Wagtail
  Framework :: Wagtail :: 4
  Topic :: Scientific/Engineering
long_description = file:README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.8
setup_requires =
  setuptools >= 41
  pip >= 19
include_package_data = true
packages = find:
install_requires =
    wagtail>=4.1
    graphene-django>=3, <4
    wagtail-headless-preview


[options.extras_require]
channels =
    Django>=3.2, <4.1
    channels>=3.0, <3.1
    channels_redis==3.3.0
    graphql-ws==0.4.4


[doc8]
ignore=D000,D001
